--- a/WarehouseAPI/src/main/resources/templates/layout/layout.html
+++ b/WarehouseAPI/src/main/resources/templates/layout/layout.html
@@ -46,93 +46,105 @@
                 </a>
 
                 <!-- Divider -->
-                <hr class="sidebar-divider my-0">
+                <hr class="sidebar-divider my-0" sec:authorize="isAuthenticated()">
                 <li class="nav-item nav-dash">
                     <a class="nav-link nav-dash" th:href="@{/}">
                         <i class="fas fa-fw fa-tachometer-alt"></i>
-                        <span>Dashboard</span></a>
+                        <span >Dashboard</span></a>
                 </li> 
-                <li class="nav-item nav-goodsMaster">
+                <li class="nav-item nav-goodsMaster" sec:authorize="isAuthenticated()">
                     <a class="nav-link nav-goodsMaster" th:href="@{/inventory}">
                         <i class="fa-solid fa-boxes-stacked"></i>
-                        <span>Inventory</span></a>
+                        <span >Inventory</span></a>
                 </li>
 
 
-                <hr class="sidebar-divider my-0">
-                 <li class="nav-item nav-issue">
+                <hr class="sidebar-divider my-0" >
+                 <li class="nav-item nav-issue" sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_MANAGER') 
+                              or hasRole('ROLE_MOVEMENT')">
                     <a class="nav-link nav-issue" th:href="@{/Issue}">
                         <i class="fa-solid fa-money-bill"></i>
-                        <span>Issue Order</span></a>
+                        <span >Issue Order</span></a>
                 </li>
-                <li class="nav-item nav-sale">
+                <li class="nav-item nav-sale" sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_MANAGER') 
+                              or hasRole('ROLE_CREATE_SO') or hasRole('ROLE_APPROVE_SO')">
                     <a class="nav-link nav-sale" th:href="@{/sale/browse}">
                         <i class="fa-solid fa-money-bill"></i>
-                        <span>Sale Order</span></a>
+                        <span >Sale Order</span></a>
                 </li>
-                <li class="nav-item nav-allocate">
+                <li class="nav-item nav-allocate" sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_MANAGER') 
+                              or hasRole('ROLE_MOVEMENT')">
                     <a class="nav-link nav-allocate" th:href="@{/allocated}">
                         <i class="fa-solid fa-boxes-stacked"></i>
-                        <span>Allocate Request</span></a>
+                        <span >Allocate Request</span></a>
                 </li>
-                <li class="nav-item nav-unallocate">
+                <li class="nav-item nav-unallocate" sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_MANAGER') 
+                              or hasRole('ROLE_MOVEMENT')">
                     <a class="nav-link nav-unallocate" th:href="@{/allocated/browse}">
                         <i class="fa-solid fa-boxes-stacked"></i>
-                        <span>Unallocate</span></a>
+                        <span >Unallocate</span></a>
                 </li>
-                 <li class="nav-item nav-unqualified">
+                 <li class="nav-item nav-unqualified" sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_MANAGER') 
+                              or hasRole('ROLE_MOVEMENT')">
                     <a class="nav-link nav-unqualified" th:href="@{/unqualified}">
                         <i class="fa-solid fa-recycle"></i>
-                        <span>Unqualified</span></a>
+                        <span >Unqualified</span></a>
                 </li>
-                <hr class="sidebar-divider my-0">
-                <li class="nav-item nav-qc">
+                <hr class="sidebar-divider my-0" >
+                <li class="nav-item nav-qc" sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_MANAGER')
+                              or hasRole('ROLE_QC')">
                     <a class="nav-link nav-qc" th:href="@{/qc}">
                         <i class="fas fa-fw fa-tachometer-alt"></i>
-                        <span>QC</span></a>
+                        <span >QC</span></a>
                 </li>
-                <li class="nav-item nav-incoming">
+                <li class="nav-item nav-incoming" sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_MANAGER')
+                              or hasRole('ROLE_QC') or hasRole('ROLE_RECEIVE_INCOM')">
                     <a class="nav-link nav-incoming" th:href="@{/Incoming}">
                         <i class="fas fa-fw fa-tachometer-alt"></i>
-                        <span>Incoming List</span></a>
+                        <span >Incoming List</span></a>
                 </li>
-                <hr class="sidebar-divider my-0">
+                <hr class="sidebar-divider my-0" sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_MANAGER') 
+                              or hasRole('ROLE_APP')">
                 <li class="nav-item nav-goods">
                     <a class="nav-link nav-goods" th:href="@{/goods}">
                         <i class="fa-solid fa-cookie-bite"></i>
-                        <span>Goods Infomation</span></a>
+                        <span >Goods Information</span></a>
                 </li>
-                <li class="nav-item nav-warehouse">
+                <li class="nav-item nav-warehouse" sec:authorize="isAuthenticated()">
                     <a class="nav-link nav-warehouse" th:href="@{/warehouse}">
                         <i class="fa-solid fa-warehouse"></i>
-                        <span>Warehouse</span></a>
+                        <span >Warehouse</span></a>
                 </li>
-                <li class="nav-item nav-locs">
+                <li class="nav-item nav-locs" sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_MANAGER') 
+                              or hasRole('ROLE_APP')">
                     <a class="nav-link nav-locs" th:href="@{/locs}">
                         <i class="fa-solid fa-house-user"></i>
-                        <span>Location</span></a>
+                        <span >Location</span></a>
                 </li>
-                <li class="nav-item nav-supplier">
+                <li class="nav-item nav-supplier" sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_MANAGER') 
+                              or hasRole('ROLE_APP')">
                     <a class="nav-link nav-supplier" th:href="@{/suppliers}">
                         <i class="fa-solid fa-user-tie"></i>
-                        <span>Supplier</span></a>
+                        <span >Supplier</span></a>
                 </li>
-                <li class="nav-item nav-supplier">
+                <li class="nav-item nav-supplier" sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_MANAGER') 
+                              or hasRole('ROLE_APP')">
                     <a class="nav-link nav-customer" th:href="@{/customer}">
                         <i class="fa-solid fa-person-walking-luggage"></i>
-                        <span>Customer</span></a>
+                        <span >Customer</span></a>
                 </li>
                 
-                <li class="nav-item nav-supplier">
+                <li class="nav-item nav-supplier" sec:authorize="isAuthenticated()">
                     <a class="nav-link nav-trans" th:href="@{/transaction}">
                         <i class="fa-solid fa-truck-moving"></i>
-                        <span>Transaction</span></a>
+                        <span >Transaction</span></a>
                 </li>
 
-                <li class="nav-item nav-user" sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_MANAGER')">
+                <li class="nav-item nav-user" sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_MANAGER') 
+                              or hasRole('ROLE_APP')">
                     <a class="nav-link nav-user" th:href="@{/user}">
                         <i class="fa-solid fa-user"></i>
-                        <span>User</span></a>
+                        <span >User</span></a>
                 </li>
 
                 <!-- Nav Item - Dashboard -->
