--- a/WarehouseAPI/src/main/resources/templates/home/index.html
+++ b/WarehouseAPI/src/main/resources/templates/home/index.html
@@ -15,7 +15,18 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 
             <!-- Page Heading -->
           
-
+            <input type="hidden" id="jan_count" th:value="${jan}"/>
+            <input type="hidden" id="feb_count" th:value="${feb}"/>
+            <input type="hidden" id="thi_count" th:value="${thi}"/>
+            <input type="hidden" id="apr_count" th:value="${apr}"/>
+            <input type="hidden" id="may_count" th:value="${may}"/>
+            <input type="hidden" id="jun_count" th:value="${jun}"/>
+            <input type="hidden" id="july_count" th:value="${july}"/>
+            <input type="hidden" id="aug_count" th:value="${aug}"/>
+            <input type="hidden" id="sep_count" th:value="${sep}"/>
+            <input type="hidden" id="oct_count" th:value="${oct}"/>
+            <input type="hidden" id="nov_count" th:value="${nov}"/>
+            <input type="hidden" id="dec_count" th:value="${dec}"/>
             <!-- Content Row -->
             <div class="row">
 
@@ -102,7 +113,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         <!-- Card Header - Dropdown -->
                         <div
                             class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                            <h6 class="m-0 font-weight-bold text-primary">Earnings Overview</h6>
+                            <h6 class="m-0 font-weight-bold text-primary">Total Orders Overview</h6>
                             <div class="dropdown no-arrow">
                                 <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
