--- a/WarehouseAPI/src/main/resources/templates/home/index.html
+++ b/WarehouseAPI/src/main/resources/templates/home/index.html
@@ -27,6 +27,19 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <input type="hidden" id="oct_count" th:value="${oct}"/>
             <input type="hidden" id="nov_count" th:value="${nov}"/>
             <input type="hidden" id="dec_count" th:value="${dec}"/>
+            
+            <input type="hidden" id="order1" th:value="${order1}"/>
+            <input type="hidden" id="order2" th:value="${order2}"/>
+            <input type="hidden" id="order3" th:value="${order3}"/>
+            <input type="hidden" id="order4" th:value="${order4}"/>
+            <input type="hidden" id="order5" th:value="${order5}"/>
+            <input type="hidden" id="order6" th:value="${order6}"/>
+            <input type="hidden" id="order7" th:value="${order7}"/>
+            <input type="hidden" id="order8" th:value="${order8}"/>
+            <input type="hidden" id="order9" th:value="${order9}"/>
+            <input type="hidden" id="order10" th:value="${order10}"/>
+            <input type="hidden" id="order11" th:value="${order11}"/>
+            <input type="hidden" id="order12" th:value="${order12}"/>
             <!-- Content Row -->
             <div class="row">
 
