--- a/WarehouseAPI/src/main/resources/templates/issue/detail.html
+++ b/WarehouseAPI/src/main/resources/templates/issue/detail.html
@@ -153,9 +153,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             text: "You won't be able to revert this!",
                             icon: 'warning',
                             showCancelButton: true,
-                            confirmButtonColor: '#3085d6',
+                            confirmButtonColor: '#20bf6b',
                             cancelButtonColor: '#d33',
-                            confirmButtonText: 'Yes, delete it!'
+                            confirmButtonText: 'Yes, submit it!'
                         }).then((result) => {
                             if (result.isConfirmed) {
                                 console.log(jsObj);
